tests/baselines/reference/incorrectRecursiveMappedTypeConstraint.errors.txt
tests/cases/compiler/incorrectRecursiveMappedTypeConstraint.ts(2,32): error TS2313: Type parameter 'P' has a circular constraint.


==== tests/cases/compiler/incorrectRecursiveMappedTypeConstraint.ts (1 errors) ====
    // #17847
    function sum<T extends { [P in T]: number }, K extends keyof T>(n: number, v: T, k: K) {
                                   ~
!!! error TS2313: Type parameter 'P' has a circular constraint.
        n += v[k];
    }
    